2003-09-15  Adam Fedor  <fedor@gnu.org>

	* Source/gsc/GSGState.m ([GSGState -deepen]): Typo fix - copy
	textCtm (reported by Banlu Kemiyatorn <id@project-ile.net>).

2003-09-09  Adam Fedor  <fedor@gnu.org>

	* Source/gsc/GSContext.m (-DPSsetgstate:): Copy gstate so we
	don't modify original.

2003-09-08 01:39  Alexander Malmberg <alexander@malmberg.org>

	* Source/art/blit.m (artcontext_setup_draw_info): Add some debug
	logging.

2003-09-03  Adam Fedor  <fedor@gnu.org>

	* Source/xdps/GNUmakefile: include config.make (patch from
	Aredridel <aredridel@nbtsc.org>).

2003-09-02  Adam Fedor  <fedor@gnu.org>

	* Tools/gpbs.m (init): Don't mess with file descriptors on MinGW.

2003-09-02  Fred Kiefer <FredKiefer@gmx.de>

	* Tools/xpbs.m
	Made all calls to XGetAtomName() free their memory later on.
	Removed function osTypeToX(). Extracted method
	[getSelectionData:type:] from [xSelectionNotify:]. 
	[xSelectionNotify:] now supports incremental data transfer and is
	save against failing string conversions. Complete rewrite of
	[xProvideSelection:] to better follow the ICCCM
	specification. This now implements TIMESTAMP, MULTIPLE and
	COMPOUND_TEXT (all untested!)
	
2003-08-31  Adam Fedor  <fedor@gnu.org>

	* Tools/gpbs.m (init): Close file descriptors so gpbs can be a proper
	daemon.

2003-08-26  Adam Fedor  <fedor@gnu.org>

	* Version 0.8.9

2003-08-19  Fred Kiefer <FredKiefer@gmx.de>

	* Tools/xpbs.m
	Made some of the NSLog messages	more explicit on what did go wrong.

2003-08-17  Fred Kiefer <FredKiefer@gmx.de>

	* Tools/gpbs.m
	[PasteboardServer init] made sure that class XPbOwner gets
	initialized, by adding a dummy call to class.
	* Tools/xpbs.m
	[XPbOwner requestData:] added loop to get data of size bigger that 32K
	bytes. [XPbOwner pasteboard:provideDataForType:] and
	[XPbOwner pasteboardChangedOwner:] removed the remaining ifdef tests for
	X_HAVE_UTF8_STRING. Removed function xTypeToOs() as this was not used.

2003-08-16  Fred Kiefer <FredKiefer@gmx.de>
